--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -1,10 +1,16 @@
 name: "setup-env"
 description: "Does to lifting to install nix and setup cachix on the runner"
 inputs:
+  github_token:
+    description: "Token to be used for Github"
+    required: true
   setup_cachix:
     description: "If cachix should be setup"
-    required: true
+    required: false
     default: true
+  cachix_token:
+    description: "Token to be used for cachix"
+    required: false
 runs:
   using: "composite"
   steps:
@@ -13,7 +19,7 @@ runs:
       with:
         extra_nix_config: |
           auto-optimise-store = true
-          access-tokens = github.com=${{ secrets.GH_TOKEN }}
+          access-tokens = github.com=${{ inputs.github_token }}
           experimental-features = nix-command flakes
           substituters = https://cache.nixos.org/ https://nix-community.cachix.org https://shawn8901.cachix.org
           trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= shawn8901.cachix.org-1:7RAYBGET4e+szLrg86T9PP1vwDp+T99Fq0sTDt3B2DA=
@@ -22,5 +28,5 @@ runs:
       uses: cachix/cachix-action@v12
       with:
         name: shawn8901
-        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+        authToken: "${{ inputs.cachix_token }}"
         pathsToPush: result
