--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -1,4 +1,4 @@
-name: Updater
+name: Flake Updater
 
 on:
   schedule:
@@ -19,8 +19,9 @@ jobs:
       - name: Install nix
         uses: ./.github/actions/setup-env
         with:
-          setup-cachix: false
-      - name: Update and check the flake
+          github_token: "${{ secrets.GH_TOKEN }}"
+          setup_cachix: false
+      - name: Update flake
         run: nix flake update
       - name: Check Flake
         run: nix flake check
@@ -55,6 +56,9 @@ jobs:
           token: "${{ secrets.GH_TOKEN }}"
       - name: Install nix
         uses: ./.github/actions/setup-env
+        with:
+          github_token: "${{ secrets.GH_TOKEN }}"
+          cachix_token: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Restore flake.lock
         uses: actions/download-artifact@v3
         with:
@@ -78,6 +82,9 @@ jobs:
           token: "${{ secrets.GH_TOKEN }}"
       - name: Install nix
         uses: ./.github/actions/setup-env
+        with:
+          github_token: "${{ secrets.GH_TOKEN }}"
+          cachix_token: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Restore flake.lock
         uses: actions/download-artifact@v3
         with:
@@ -99,6 +106,8 @@ jobs:
         with:
           name: flake_lock
       - name: create PR
+        uses: ./.github/actions/create-pr
         with:
           title: "Auto update $(date -I)"
           body: "Automatic flake update on $(date -I)"
+          github_token: "${{ secrets.GH_TOKEN }}"
