--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -20,6 +20,7 @@ jobs:
         uses: ./.github/actions/setup-env
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
+          netrc_content: "${{ secrets.NETRC_CONTENT }}"
           setup_cachix: false
       - name: Update flake
         run: nix flake update
@@ -60,6 +61,7 @@ jobs:
         uses: ./.github/actions/setup-env
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
+          netrc_content: "${{ secrets.NETRC_CONTENT }}"
           cachix_token: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Restore flake.lock
         uses: actions/download-artifact@v3
