--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -23,6 +23,7 @@ runs:
     - name: Install nix
       uses: cachix/install-nix-action@v18
       with:
+        install_url: https://releases.nixos.org/nix/nix-2.11.0/install
         extra_nix_config: |
           auto-optimise-store = true
           access-tokens = github.com=${{ inputs.github_token }}
