--- a/.github/workflows/update-nixpkgs.yml
+++ b/.github/workflows/update-nixpkgs.yml
@@ -25,41 +25,25 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: "Shawn8901/nixpkgs"
-          ref: "nixos-unstable-custom"
-          fetch-depth: 0
           token: "${{ secrets.GH_TOKEN }}"
       - name: Set up git
         shell: bash
         run: |
           git config user.email git@pointjig.de
           git config user.name "Git Bot"
+          git fetch origin
       - name: Update custom branch
         shell: bash
         run: |
+          git checkout nixos-unstable-custom
           git rebase origin/nixos-unstable
           git push --force-with-lease
         env:
           GH_TOKEN: "${{ secrets.GH_TOKEN }}"
-
-  update-branch_microarchitecture:
-    runs-on: ubuntu-22.04
-    needs: [update-branch]
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
-        with:
-          repository: "Shawn8901/nixpkgs"
-          ref: "x86-64-v3"
-          fetch-depth: 0
-          token: "${{ secrets.GH_TOKEN }}"
-      - name: Set up git
+      - name: Update custom arch branch
         shell: bash
         run: |
-          git config user.email git@pointjig.de
-          git config user.name "Git Bot"
-      - name: Update custom branch
-        shell: bash
-        run: |
+          git checkout x86-64-v3
           git rebase origin/nixos-unstable-custom
           git push --force-with-lease
         env:
