--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -21,11 +21,10 @@ jobs:
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
           netrc_content: "${{ secrets.NETRC_CONTENT }}"
-          setup_cachix: false
       - name: Update flake
         run: nix flake update
       - name: Check Flake
-        run: nix flake check --allow-import-from-derivation
+        run: nix flake check
       - name: Set up git
         shell: bash
         run: |
@@ -35,5 +34,18 @@ jobs:
         shell: bash
         run: |
           git diff-index --quiet HEAD -- && echo "no changes" && exit 0
-          git commit -am "flake.lock: Update"
-          git push origin HEAD:refs/heads/staging --force
+
+          git switch -c update-flake_$(date -I)
+
+          git commit -am "flake.lock: Update $(date -I)"
+
+          git push -u origin update-flake_$(date -I)
+          PR=$(gh pr create \
+          --assignee Shawn8901 \
+          --base main \
+          --body "Automatic package update for flake.lock on $(date -I)" \
+          --label bot --label flake \
+          --fill \
+          --title "Update for flake.lock $(date -I)")
+        env:
+          GH_TOKEN: ${{ github.token }}
