ci: rework gh actions

--- a/.github/workflows/package-update.yml
+++ b/.github/workflows/package-update.yml
@@ -20,7 +20,6 @@ jobs:
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
           netrc_content: "${{ secrets.NETRC_CONTENT }}"
-          setup_cachix: false
       - name: Generate packages.json
         run: |
           nix eval --json .#packages.x86_64-linux --apply 'builtins.mapAttrs(name: value: builtins.hasAttr "runUpdate" value && value.runUpdate)' > packages.json
@@ -47,7 +46,6 @@ jobs:
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
           netrc_content: "${{ secrets.NETRC_CONTENT }}"
-          cachix_token: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Install dependencies
         run: |
           nix profile install nixpkgs#nix-update
@@ -69,11 +67,10 @@ jobs:
           git switch -c updates-${{ matrix.package }}_$(date -I)
           git push -u origin updates-${{ matrix.package }}_$(date -I)
           PR=$(gh pr create \
-          --assignee Shawn8901 \
           --base main \
           --body "Automatic package update for ${{ matrix.package }} on $(date -I)" \
           --fill \
-          --label bot \
+          --label bot --label package \
           --title "Package update for ${{ matrix.package }} $(date -I)")
           gh pr merge $PR --merge --delete-branch
         env:
