ci: switch flake.lock tag

--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -44,7 +44,7 @@ jobs:
           --assignee Shawn8901 \
           --base main \
           --body "Automatic package update for flake.lock on $(date -I)" \
-          --label bot --label flake \
+          --label bot --label CI \
           --fill \
           --title "Update for flake.lock $(date -I)")
         env:
