--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -37,9 +37,9 @@ jobs:
             gh pr checkout $(gh pr list --label CI  --json number | jq ".[].number")
             commits_ahead=$(git rev-list --count HEAD..origin/main)
             echo "Commits ahead: $commits_ahead"
-            git log --one-line 
+            git log --oneline 
             echo "_---------"
-            git log --one-line origin/main
+            git log --oneline origin/main
             if [ $commits_ahead -ne 0 ]
             then
               git fetch origin
