--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: "${{ secrets.GH_TOKEN }}"
+          fetch-depth: 0
       - name: Set up git
         shell: bash
         run: |
