ci: enable trace output for flake check

--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -54,7 +54,7 @@ jobs:
           fi
 
           nix flake update
-          nix flake check
+          nix flake check --show-trace
 
           git diff-index --quiet HEAD -- && echo "no changes" && exit 0
 
