--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -16,11 +16,11 @@ runs:
     - name: Install nix
       uses: cachix/install-nix-action@v18
       with:
-        install_url: https://releases.nixos.org/nix/nix-2.11.0/install
+        install_url: https://releases.nixos.org/nix/nix-2.17.1/install
         extra_nix_config: |
           auto-optimise-store = true
           access-tokens = github.com=${{ inputs.github_token }}
           experimental-features = nix-command flakes
           netrc-file = /home/runner/.netrc
-          substituters = https://cache.nixos.org/ https://nix-community.cachix.org https://cache.pointjig.de/nixos
+          substituters = https://cache.nixos.org https://nix-community.cachix.org https://cache.pointjig.de/nixos
           trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= nixos:Uj2EOFZu9/Y6r6qVlxeCyiGVqyz30fMybzT3kBDsPg8=
