--- a/.github/workflows/package-update.yml
+++ b/.github/workflows/package-update.yml
@@ -46,15 +46,12 @@ jobs:
         with:
           github_token: "${{ secrets.GH_TOKEN }}"
           netrc_content: "${{ secrets.NETRC_CONTENT }}"
-      - name: Install dependencies
-        run: |
-          nix profile install nixpkgs#nix-update
       - name: Set up git
         run: |
           git config user.email git@pointjig.de
           git config user.name "Git Bot"
       - name: Update package
-        run: nix-update --format --build --commit --flake ${{ matrix.package }}
+        run: nix run nixpkgs\#nix-update -- --format --build --commit --flake ${{ matrix.package }}
       - name: Push branch and create PR
         run: |
           UPSTREAM=${1:-'@{u}'}
