ci: fix attic binary cache and update netrc

--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -39,7 +39,7 @@ jobs:
             commits_ahead=$(git rev-list --count HEAD..origin/main)
             echo "Commits ahead: $commits_ahead"
             git log --oneline -5
-            echo "_---------"
+            echo "----------"
             git log --oneline -5 origin/main
             if [ $commits_ahead -ne 0 ]
             then
